manifests/showks-portal-frontend/manifest.yaml
---
# Source: showks-portal-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-portal-frontend-temp
  namespace: showks
  labels:
    app: showks-portal-frontend-temp
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: app-port
  selector:
    app: showks-portal-frontend-temp

---
# Source: showks-portal-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-portal-frontend-temp
  namespace: showks
  labels:
    app: showks-portal-frontend-temp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-portal-frontend-temp
  template:
    metadata:
      labels:
        app: showks-portal-frontend-temp
    spec:
      containers:
        - name: showks-portal-frontend-temp
          image: gcr.io/ipc-cloudnativedays/showks-portal-frontend:stg-664d91d3170f1732e3bd0033c4999c624142fbb2
          ports:
            - name: app-port
              containerPort: 3000
              protocol: TCP
